v174: fix the Quest List UI to have about 10px less of height so its not pushing UI around or overflowing into our bottom buttons

--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ body {
   padding: 4px;
   display: none;
   margin-top: 4px;
-  height: calc(100% - 251px);
+  height: calc(100% - 256px);
 }
 
 #quest-journal.shown {
